--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.categorie-img{
+    width: 100px;
+}
+.watch{
+    background-color: orange;
+    
+}
 .bgn{
     background-color: rgb(252, 234, 232);
 }
