--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     background-color: orange;
     
 }
+.shoes{
+    background-color: blue;
+}
 .bgn{
     background-color: rgb(252, 234, 232);
 }
